--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 </ul>
             </nav>
         </div>
-        <p>copyright 2019 By Olajire Oladunni</p>
+    <p> Design inspiration by Luvy Engine</p>
     </footer>
 
     <script src="js/jquery-3.3.1.min.js">
